--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
     "styled-components": "^4.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.6"
   },
   "resolutions": {
     "immer": "^8.0.1",
@@ -107,8 +107,18 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@pancakeswap/uikit": "^0.64.0",
+    "@visx/gradient": "^2.1.0",
+    "@visx/group": "^2.1.0",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.4.0",
+    "date-fns": "^2.28.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "react-ga4": "^1.4.1",
+    "recharts": "^2.1.9",
     "zircon-protocol": "^1.0.0",
-    "zircon-sdk": "1.0.1"
+    "zircon-sdk": "^1.0.3-alpha.0"
   }
 }
