--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "module": "esnext",
     "strict": true,
     "alwaysStrict": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "moduleResolution": "node",
