--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
     "styled-components": "^4.2.0",
-    "typescript": "^4.1.6"
+    "typescript": "^3.8.3"
   },
   "resolutions": {
     "immer": "^8.0.1",
@@ -114,8 +114,10 @@
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.4.0",
     "date-fns": "^2.28.0",
-    "graphql": "^16.3.0",
+    "graphql": "^14.6.0",
     "graphql-request": "^4.1.0",
+    "i": "^0.3.7",
+    "npm": "^8.5.5",
     "react-ga4": "^1.4.1",
     "recharts": "^2.1.9",
     "zircon-protocol": "^1.0.1",
