--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "npm": "^8.5.5",
     "react-ga4": "^1.4.1",
     "recharts": "^2.1.9",
-    "zircon-protocol": "^1.0.1",
-    "zircon-sdk": "^1.0.3-alpha.0"
+    "zircon-protocol": "^1.0.2",
+    "zircon-sdk": "^1.0.4"
   }
 }
