--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@visx/shape": "^2.4.0",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.3.4",
     "graphql": "^14.6.0",
     "graphql-request": "^4.1.0",
     "i": "^0.3.7",
