--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "react-countup": "^6.2.0",
     "react-ga4": "^1.4.1",
     "recharts": "^2.1.9",
+    "swiper": "^8.2.4",
     "swr": "^1.3.0",
     "zircon-protocol": "1.0.3-alpha.1",
     "zircon-sdk": "1.0.6-alpha.2"
