--- a/package.json
+++ b/package.json
@@ -119,12 +119,13 @@
     "graphql": "^14.6.0",
     "graphql-request": "^4.1.0",
     "i": "^0.3.7",
+    "lottie-web": "^5.9.6",
     "npm": "^8.5.5",
     "react-countup": "^6.2.0",
     "react-ga4": "^1.4.1",
     "recharts": "^2.1.9",
     "swiper": "^8.2.4",
     "swr": "^1.3.0",
-    "zircon-sdk": "1.0.6-alpha.9"
+    "zircon-sdk": "1.0.6-alpha.10"
   }
 }
