--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@visx/shape": "^2.4.0",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.5",
     "framer-motion": "^6.3.4",
     "graphql": "^14.6.0",
     "graphql-request": "^4.1.0",
@@ -122,7 +123,7 @@
     "lottie-react-web": "^2.2.2",
     "lottie-web": "^5.9.6",
     "npm": "^8.5.5",
-    "numeral" : "^2.0.6",
+    "numeral": "^2.0.6",
     "react-countup": "^6.2.0",
     "react-ga4": "^1.4.1",
     "recharts": "^2.1.9",
