--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "@visx/shape": "^2.4.0",
     "bignumber.js": "^9.0.2",
     "date-fns": "^2.28.0",
-    "dayjs": "^1.11.5",
+    "dayjs": "^1.11.6",
     "framer-motion": "^6.3.4",
     "graphql": "^14.6.0",
     "graphql-request": "^4.1.0",
@@ -129,6 +129,6 @@
     "recharts": "^2.1.9",
     "swiper": "^8.2.4",
     "swr": "^1.3.0",
-    "zircon-sdk": "1.0.10-rc-34b"
+    "zircon-sdk": "1.0.10-rc-34c"
   }
 }
