--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         timeout-minutes: 5
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 15
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
