--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "recharts": "^2.1.9",
     "swiper": "^8.2.4",
     "swr": "^1.3.0",
+    "web3": "3.0.0-rc.4",
     "zircon-sdk": "1.0.11-rc-110"
   }
 }
